refactor: JdbcTemplate -> JPA로 변경, DTO 클래스 추가